k8s/overlays/dev/patch-init.yaml
# k8s/overlays/dev/patch-init.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-command-server
spec:
  selector:
    matchLabels:
      app: profile-command-server
  template:
    spec:
      containers:
        - name: server
